# elevate-simple-etl

./: .coverage  .gitignore  README.md  cleaned_data.json  extract.ipynb  extract.py  extracted_data.json  extracted_data.json.bak2  extracted_data.json.bak3  final_data.csv  load.ipynb  load.py  pyproject.toml  requirements.txt  run_pipeline.py  submission.txt  transform.ipynb  transformed_data.json
.ipynb_checkpoints/: extract-checkpoint.ipynb  load-checkpoint.ipynb  transform-checkpoint.ipynb
tests/: test_extract.py  test_load.py  test_transform.py  test_write_data.py
utils/: extract_run.py  load_run.py  transform.py  transform_run.py  write_data.py
