[project]
name = "elevate-simple-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.54.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
